<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="trending_tv_shows">Trending Shows</string>
    <string name="airing_now">Airing Now</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular_shows">Popular Shows</string>

    <string name="see_all">See all</string>
    <string name="plot">Plot</string>
    <string name="lorem_epsum">"        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.         It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised         in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus         PageMaker including versions of Lorem Ipsum."</string>
</resources>